# RAG-conversational-Assistant

./: .env-example  README.md  pyproject.toml
src/rag_langchain/: __init__.py  app.py  main.py  rag_conversation.py
